# whatsapp_interactive_message

./: .gitignore  README.md
ai-reference/: AI-Training-Intent-Schema.md  DotNet - WhatsApp 4Jawaly.md  Flutter - WhatsApp 4Jawaly.md  Go - WhatsApp 4Jawaly.md  Kotlin - WhatsApp 4Jawaly.md  PHP - WhatsApp 4Jawaly.md  Python - WhatsApp 4Jawaly.md  Ruby - WhatsApp 4Jawaly.md  Rust - WhatsApp 4Jawaly.md  Swift - WhatsApp 4Jawaly.md
dotnet/: Program.cs  README.md  WhatsApp.csproj  WhatsAppService.cs
flutter/: README.md  example_usage.dart  pubspec.yaml  whatsapp_service.dart
go/echo/: README.md  go.mod  main.go  whatsapp_service.go
go/fiber/: README.md  go.mod  main.go  whatsapp_service.go
go/gin/: README.md  go.mod  main.go  whatsapp_service.go
go/net_http/: README.md  send_audio.go  send_buttons.go  send_contact.go  send_document.go  send_image.go  send_list.go  send_location.go  send_text.go  send_video.go
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
php/legacy/: README.md  send_audio.php  (+8 more)
ruby/: README.md  send_audio.rb  send_buttons.rb  send_contact.rb  send_document.rb  send_image.rb  send_list.rb  send_location.rb  send_text.rb  send_video.rb
rust/: Cargo.toml  README.md
rust/src/: api.rs  main.rs  send_audio.rs  send_buttons.rs  send_contact.rs  send_document.rs  send_image.rs  send_list.rs  send_location.rs  send_text.rs  send_video.rs
swift/: README.md  send_audio.swift  send_buttons.swift  send_contact.swift  send_document.swift  send_image.swift  send_list.swift  send_location.swift  send_text.swift  send_video.swift
(+51 files in other folders)
