[package]
name = "whatsapp_4jawaly"
version = "0.1.0"
edition = "2021"
description = "WhatsApp message samples for 4Jawaly API"
authors = ["4Jawaly"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
